@@ -1,6 +1,11 @@
-(make-project "Hello World"
-              "examples/hello-world.lisp"
-              :transpiler  (aprog1 *js-transpiler*
-                             (= (transpiler-dump-selector !) '(function butlast)))
-              :emitter     [make-html-script "compiled/hello-world.html" _])
+(make-js-project
+  :title
+    "Hello World"
+  :outfile
+    "compiled/hello-world.html"
+  :files
+    '("examples/hello-world.lisp")
+  :transpiler
+    (aprog1 *js-transpiler*
+      (= (transpiler-dump-selector !) '(function butlast))))
 (quit)
